Sat Apr 21 11:46:02 2001  George Lebl <jirka@5z.com>

	* gui/icon-entry-hack.[ch]: update hack from panel

Thu Apr 19 17:32:36 2001  George Lebl <jirka@5z.com>

	* docs/C/gdm.sgml:  Update the VerboseAuth and AllowRoot sections
	  to reflect what actually happens nowdays.

Thu Apr 19 13:18:59 2001  George Lebl <jirka@5z.com>

	* daemon/verify-crypt.c, daemon/verify-shadow.c,
	  daemon/verify-pam.c:  Fix GdmAllowRoot (it only worked in verbose
	  mode), made the verbose mode selection useful without being
	  insecure, and in nonverbose mode you still get "Login incorrect"
	  message as those are safe.  In pam mode we now check for 
	  root as well.  We also now check for shell to be /bin/false as
	  a sign the user was disallowed from logging in.

Thu Apr 19 03:48:11 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: don't search for shells, that's wrong, if the
	  user doesn't have a shell set, we are supposed to use straight
	  /bin/sh.  On linux this makes no difference anyway since that was
	  bash.  Also detect /bin/false shells and have a better error
	  message in that case in the log file.  We should detect those
	  earlier I suppose.

Thu Apr 19 02:11:22 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Return to gid 0 after verify check, patch from
	  rmurray+gnome@cyberhqz.com (Ryan Murray)

	* daemon/auth.c: refetch the hostname each time the cookie is
	  generated to deal with changing hostnames again from Ryan

	* gui/gdmlogin.c: remove the display mutilating code for enriched
	  string, again from Ryan

	* daemon/server.c: Move logfile open after fork as it's only
	  really used by the X server process (And that's the purpose of it)
	  Again, from, you guessed it, Ryan

	* daemon/slave.c: set gid after uid to 0 so that it doesn't fail
	  (from Ryan again)

	* gui/gdmlogin.c: do a gtk_main_quit in the QUIT handler, hopefuly
	  won't cause races, and this is actually by me

	* gui/gdmlogin.c: another one from ryan, set the password max entry