@@ -1,3 +1,7 @@
+Mon Apr 23 18:49:55 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c:  fix buffer overrun in making the enriched string
+
 Sat Apr 21 11:46:02 2001  George Lebl <jirka@5z.com>
 
 	* gui/icon-entry-hack.[ch]: update hack from panel
